# SlicerTracto

./: .gitignore  README.md  tempCodeRunnerFile.python
MTP/: CMakeLists.txt  tractographyOnSSH.logs.txt
MTP/DipyTools/: CMakeLists.txt  DipyTools.py
MTP/DipyTools/Resources/UI/: DipyTools.ui
MTP/DipyTools/Scripts/: TreeStructure.py
MTP/FirstModule/: FirstModule.py
MTP/FirstModule/Modules/: generateFodf.py
MTP/FirstModule/Resources/UI/: FirstModule.ui
MTP/FourthModule/: CMakeLists.txt  FourthModule.py
MTP/FourthModule/Modules/: segmentation.py
MTP/FourthModule/Resources/UI/: FourthModule.ui
MTP/SecondModule/: CMakeLists.txt  SecondModule.py
MTP/SecondModule/ComputationManager/: ComputationManager.py  baseManager.py
MTP/SecondModule/ComputationManager/LocalManager/: LocalManager.py
MTP/SecondModule/ComputationManager/LocalManager/Algos/: dipyAlgo.py
MTP/SecondModule/ComputationManager/SSHManager/: SSHManager.py
MTP/SecondModule/ComputationManager/SSHManager/Algos/: pftAlgo.py
MTP/SecondModule/FileManager/: FileManager.py
MTP/SecondModule/LocalManager/: LocalManager.py
MTP/SecondModule/LocalManager/Algos/: algo1.py  algo2.py  pftAlgo.py
MTP/SecondModule/Modules/: tractography.py
MTP/SecondModule/Resources/UI/: SecondModule.ui
MTP/SecondModule/SSHManager/: SSHManager.py
MTP/SecondModule/SSHManager/Algos/: algo1.py  dipyAlgo.py  pftAlgo.py
MTP/SecondModule/UIManager/: TractographyUIManager.py
MTP/ThirdModule/: CMakeLists.txt  ThirdModule.py
MTP/ThirdModule/Resources/UI/: ThirdModule.ui
MTP/outputs/: frf.txt
MTP/segmentation/: CMakeLists.txt  segmentation.py
MTP/segmentation/Modules/: clustering.py
MTP/segmentation/Resources/UI/: segmentation.ui
SlicerTracto/: .gitignore  CMakeLists.txt  README.md
SlicerTracto/DipyTools/: DipyTools.py
SlicerTracto/DipyTools/Resources/UI/: DipyTools.ui  DipyTools_new.ui
SlicerTracto/DipyTools/Scripts/: DynamicUI.py  InputParams.py  UI.py
SlicerTracto/Fodf/: CMakeLists.txt  Fodf.py
SlicerTracto/Fodf/FodfComputationManager/: FodfComputationManager.py  baseManager.py
SlicerTracto/Fodf/FodfComputationManager/LocalManager/: LocalManager.py
SlicerTracto/Fodf/FodfComputationManager/LocalManager/Algos/: generateFodf.py
SlicerTracto/Fodf/FodfComputationManager/SSHManager/: SSHManager.py
SlicerTracto/Fodf/FodfComputationManager/SSHManager/Algos/: RRJ.py  generateFodf.py
SlicerTracto/Fodf/FodfUIManager/: FodfUIManager.py
SlicerTracto/Fodf/Modules/: generateFodf.py
SlicerTracto/Fodf/Resources/UI/: Fodf.ui
SlicerTracto/Metrics/: CMakeLists.txt  Metrics.py
SlicerTracto/Metrics/Modules/: metricAnalysis.py
SlicerTracto/Segment/: CMakeLists.txt  Segment.py
SlicerTracto/Segment/Modules/: segmentationModule.py
SlicerTracto/Segment/Resources/UI/: Segment.ui
SlicerTracto/Segment/SegmentComputationManager/: ComputationManager.py
SlicerTracto/Segment/SegmentComputationManager/LocalManager/: LocalManager.py
SlicerTracto/Segment/SegmentComputationManager/LocalManager/Algos/: quickBundlesAlgo.py  quickBundlesX.py
SlicerTracto/Segment/SegmentComputationManager/SSHManager/: SSHManager.py  configuration.py
SlicerTracto/Segment/SegmentComputationManager/SSHManager/Algos/: quickBundles.py  quickBundlesX.py
SlicerTracto/Segment/SegmentUIManager/: segmentUIManager.py
SlicerTracto/Tractography/: Tractography.py
SlicerTracto/Tractography/Resources/UI/: Tractography.ui
SlicerTracto/Tractography/UIManager/: TractographyUIManager.py
SlicerTracto/Tracts/: CMakeLists.txt  Tracts.py
SlicerTracto/Tracts/ComputationManager/: ComputationManager.py  baseManager.py
SlicerTracto/Tracts/ComputationManager/LocalManager/Algos/: pftAlgo.py
SlicerTracto/Tracts/ComputationManager/SSHManager/: SSHManager.py
SlicerTracto/Tracts/ComputationManager/SSHManager/Algos/: trlfAlgo.py
SlicerTracto/Tracts/Modules/: tractography.py
SlicerTracto/Tracts/Resources/UI/: Tracts.ui
SlicerTracto/Tracts/UIManager/: TractographyUIManager.py
